--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   background-color: #22252D;
   font-family: 'Roboto Mono', monospace; /* Weights:  100 300 400 500 */
 }
-div {
+#introduction {
   background-color: rgba(250,250,250,.75);
 
   padding: 25px 50px;
