--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 body {
   background-color: #22252D;
   font-family: 'Roboto Mono', monospace; /* Weights:  100 300 400 500 */
 }
 #introduction {
-  background-color: rgba(250,250,250,.75);
+  background-color: rgba(250,250,250);
 
   padding: 25px 50px;
   text-align: center;
@@ -15,12 +20,15 @@ body {
   transform: translate(-50%, -50%);
 }
 
-h1, h3 {
-  font-weight: 400;
+h1, h2 {
+  font-weight: 500;
+  color: #444444;
 }
 
 p {
-  font-weight: 300;
+  margin-top: 25px;
+  font-weight: 400;
+  color: #666666;
 }
 
 a {
