--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,12 @@ html {
 
 body {
   background-color: #22252D;
-  font-family: 'Roboto Mono', monospace; /* Weights:  100 300 400 500 */
 }
+
 #introduction {
   background-color: rgba(250,250,250);
-
   padding: 25px 50px;
+
   text-align: center;
   margin: auto;
   position: absolute;
@@ -20,13 +20,20 @@ body {
   transform: translate(-50%, -50%);
 }
 
-h1, h2 {
+h1 {
+  font-family: 'Roboto Mono', monospace;
   font-weight: 500;
   color: #444444;
 }
 
+h2 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  color: #666666;
+}
+
 p {
-  margin-top: 25px;
+  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   color: #666666;
 }
@@ -44,23 +51,39 @@ a:hover {
 /* For screens that are 768px wide or less */
 @media screen and (max-width: 768px) {
   #introduction {
-    background-color: rgba(250,250,250,.75);
-    width: 65%;
-    padding: 25px 50px;
+    background-color: rgba(250,250,250);
+    width: 67%;
+    padding: 25px 40px;
     text-align: center;
     margin: auto;
     position: absolute;
+  }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  h2 {
+    font-size: 1.25em;
   }
 }
 
 /* For screens that are 425px wide or less */
 @media screen and (max-width: 425px) {
   #introduction {
-    background-color: rgba(250,250,250,.75);
-    width: 70%;
-    padding: 25px 50px;
+    background-color: rgba(250,250,250);
+    width: 58%;
+    padding: 25px 35px;
     text-align: center;
     margin: auto;
     position: absolute;
+  }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  h2 {
+    font-size: 1.25em;
   }
 }
