--- a/css/projects/grid-project/style.css
+++ b/css/projects/grid-project/style.css
@@ -86,6 +86,11 @@ span {
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  padding: 0;
+}
+
+.row {
+  margin: 0;
 }
 
 .col-4 {
