--- a/css/projects/grid-project/style.css
+++ b/css/projects/grid-project/style.css
@@ -5,8 +5,6 @@ html {
 
 body {
   background-color: #17a2b8;
-  /* display: block; */
-  /* margin: 0; */
 }
 
 img {
@@ -19,7 +17,7 @@ h1 {
   font-size: 1.5rem;
   margin-bottom: 0;
 
-  color: #444444;
+  color: #ffffff;
 }
 
 h2 {
@@ -27,7 +25,7 @@ h2 {
   font-weight: 500;
   font-size: 1rem;
 
-  color: #666666;
+  color: #ffffff;
 }
 
 p {
@@ -40,7 +38,7 @@ span {
   font-family: 'Roboto Mono', monospace;
   font-weight: 400;
 
-  color: #fd7e14;
+  color: #ffffff;
 }
 
 .header {
@@ -82,32 +80,29 @@ span {
   height: 600px;
 
   position: absolute;
-  top: 55%;
   left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  padding: 0;
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  padding: 50px 0 0 0;
 }
 
 .row {
   margin: 0;
 }
 
-.col-4 {
+.col-md-4 {
   height: 600px;
   overflow: auto!important;
-  padding-right: 0px;
-  /* padding: 0; */
+  padding: 0 0 0 25px;
 }
 
-.col-8 {
+.col-md-8 {
   padding-left: 0px;
   padding-right: 0px;
   /* padding: 0; */
 }
 
 .gridProject {
-  background-color: rgba(255, 255, 0, 0.25);
   position: absolute;
   top: 20%;
   left: 0;
@@ -123,6 +118,7 @@ span {
 
 #gridListed:hover {
   background-color: #dedede;
+  cursor: pointer;
 }
 
 #albumArts {
@@ -153,4 +149,5 @@ span {
 
 #albumData {
   text-align: center;
+  margin-top: 35px;
 }
