--- a/css/projects/grid-project/style.css
+++ b/css/projects/grid-project/style.css
@@ -128,6 +128,9 @@ span {
 
 #albumArt {
   padding: 0px 5px 0px 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #titleYear p {
@@ -141,6 +144,9 @@ span {
 
 #albumOriginal {
   padding: 0 10px 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #albumGrid {
