--- a/css/projects/grid-project/style.css
+++ b/css/projects/grid-project/style.css
@@ -50,6 +50,9 @@ span {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  position: relative;
+  z-index: 1000;
 }
 
 .header h2 {
@@ -77,17 +80,24 @@ span {
 }
 
 .container {
-  height: 600px;
+  height: 50%;
 
   position: absolute;
+  top: 40%;
+  bottom: 50%;
   left: 50%;
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
+  right: 50%;
+  -ms-transform: translateX(-50%, -50%);
+  transform: translate(-50%, -50%);
   padding: 50px 0 0 0;
 }
 
 .row {
   margin: 0;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .col-md-4 {
@@ -103,11 +113,6 @@ span {
 }
 
 .gridProject {
-  position: absolute;
-  top: 20%;
-  left: 0;
-  /* -ms-transform: translate(-50%, -50%); */
-  /* transform: translate(-50%, -50%); */
 }
 
 #gridListed {
@@ -156,4 +161,9 @@ span {
 #albumData {
   text-align: center;
   margin-top: 35px;
+}
+
+@media (min-width: 1200px) {
+.container, .container-lg, .container-md, .container-sm, .container-xl {
+    max-width: 75%!important;
 }
