adjusted center of divs

--- a/css/projects/grid-project/style.css
+++ b/css/projects/grid-project/style.css
@@ -164,6 +164,13 @@ span {
 }
 
 @media (min-width: 1200px) {
-.container, .container-lg, .container-md, .container-sm, .container-xl {
-    max-width: 75%!important;
+  .container, .container-lg, .container-md, .container-sm, .container-xl {
+    max-width: 65%!important;
+  }
+}
+
+@media (min-height:980px) {
+  .container {
+    top: 50%;
+  }
 }
