--- a/css/projects/grid-project/style.css
+++ b/css/projects/grid-project/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  background-color: #17a2b8;
+  background: #1F1F1F;
 }
 
 img {
@@ -30,15 +30,27 @@ h2 {
 
 p {
   font-family: 'Roboto Mono', monospace;
+  font-size: 1rem;
   color: #666666;
   margin-bottom: 0;
 }
 
-span {
-  font-family: 'Roboto Mono', monospace;
-  font-weight: 400;
+.background-image {
+  position: fixed;
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
 
-  color: #ffffff;
+	width: 100%;
+  height: 100%;
+
+  opacity: 0.5;
+
+	-webkit-filter: blur(15px);
+  -moz-filter: blur(15px);
+  -o-filter: blur(15px);
+  -ms-filter: blur(15px);
+  filter: blur(50px);
 }
 
 .header {
@@ -56,12 +68,12 @@ span {
 }
 
 .header h2 {
-  color: pink;
+  color: white;
   margin: 0;
 }
 
 .header a {
-  color: pink;
+  color: white;
   text-decoration: none;
 }
 
@@ -158,14 +170,18 @@ span {
   padding: 0 0 0 10px;
 }
 
-#albumData {
-  text-align: center;
-  margin-top: 35px;
-}
-
 @media (min-width: 1200px) {
   .container, .container-lg, .container-md, .container-sm, .container-xl {
     max-width: 65%!important;
+  }
+}
+
+@media (min-width: 1980px) {
+  p {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 1.25rem;
+    color: #666666;
+    margin-bottom: 0;
   }
 }
 
