--- a/css/projects/rogerebert/main.css
+++ b/css/projects/rogerebert/main.css
@@ -140,6 +140,59 @@ footer {
 
 }
 
+.header {
+  background-color: black;
+  margin: auto;
+  padding: 15px;
+  text-align: justify;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  position: relative;
+  z-index: 1000;
+
+  font-family: 'Roboto Mono', monospace;
+}
+
+.header h2 {
+  margin: 0;
+
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 500;
+  font-size: 1rem;
+  color: #666666;
+}
+
+.header a {
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 500;
+  font-size: 1rem;
+
+  color: white;
+  text-decoration: none;
+}
+
+.header a:hover {
+  color: #4cb9e2;
+  text-decoration: none;
+}
+
+.about-button {
+  vertical-align: bottom;
+  position:relative; /* Anything but static! */
+  width: 1.5em;
+  height: 1.5em;
+  display: inline-block;
+  color: white;
+  font-weight: bold;
+  line-height: 1em;
+  background-color: #91b2d2;
+  border: none;
+  border-radius: 50%;
+}
+
 /* For screens that are 768px wide or less */
 @media screen and (max-width: 768px) {
   #main-div {
