Added About & Contact html files, and updated the navigation styles.

--- a/css/projects/grid-project/main.css
+++ b/css/projects/grid-project/main.css
@@ -42,18 +42,23 @@ p {
 }
 
 .container {
-  width: 100%;
   margin: 0;
+  padding: 0;
   height: 50%;
+  width: 100%;
 
   position: absolute;
-  top: 40%;
+  top: 50%;
   bottom: 50%;
   left: 50%;
   right: 50%;
   -ms-transform: translateX(-50%, -50%);
   transform: translate(-50%, -50%);
-  padding: 0;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .row {
@@ -87,7 +92,7 @@ p {
 
 #gridListed {
   background-color: #efefef;
-  margin: 10px 0px;
+  margin: 0 0 10px;
   padding: 5px 0px;
 }
 
