--- a/css/nav.css
+++ b/css/nav.css
@@ -9,23 +9,23 @@ body {
   line-height: 1.5;
 }
 
-.header, .header h2, .header a, .about-button {
+.header, .header h2, .header a, .header-mobile, .about-button {
   font-family: 'Roboto Mono', monospace;
 }
 
 .header {
-  position: relative;
-  background-color: black;
-
-  margin: auto;
-  padding: 15px;
-  text-align: justify;
-
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
 
-  z-index: 1000;
+  background-color: #000;
+}
+
+.header > div {
+  padding: 15px 25px;
 }
 
 .header h2 {
@@ -34,6 +34,10 @@ body {
   font-weight: 500;
   font-size: 1rem;
   color: #666666;
+
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .header a {
@@ -48,16 +52,67 @@ body {
   text-decoration: none;
 }
 
+.links {
+  display: flex;
+  justify-content: space-between;
+}
+
+.links a {
+  padding-left: 25px;
+}
+
 .about-button {
   vertical-align: bottom;
   position: relative;
-  width: 1.5em;
-  height: 1.5em;
   display: inline-block;
   color: white;
   font-weight: bold;
   line-height: 1em;
-  background-color: #91b2d2;
+  background-color: #4cb9e2;
   border: none;
-  border-radius: 50%;
+}
+
+/* Mobile Navigation */
+
+.header-mobile {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+  display: none;
+}
+
+.header-mobile h2 {
+  margin: 0;
+  font-size: 1rem;
+}
+
+.header-mobile a {
+  display: block;
+  color: white;
+  padding: 15px;
+}
+
+.title-mobile {
+  background-color: #000000;
+  display: flex;
+  justify-content: space-between;
+}
+
+.title-mobile button {
+  padding: 15px 25px;
+  cursor: pointer;
+  font-size: larger;
+}
+
+#links-mobile {
+  display: none;
+  background-color: #161616;
+  height: 100vh;
+  width: 100vw;
+}
+
+#links-mobile a:hover {
+  background-color: #ddd;
+  color: black;
 }
