Soft transition between tracks and lists

--- a/css/projects/69-love-songs/main.css
+++ b/css/projects/69-love-songs/main.css
@@ -2,8 +2,13 @@ body {
   background-color: black;
 }
 
-#album-content, #lyrics-content {
+#album-content {
   padding-top: 100px;
+  transition: opacity 1s ease-out;
+}
+
+#lyrics-content {
+  transition: opacity 1s ease-out;
 }
 
 #shell {
@@ -12,7 +17,9 @@ body {
   max-width: 1080px;
 }
 #lyrics-content {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  height: 0;
 }
 #main-content {
   display: grid;
@@ -33,6 +40,7 @@ body {
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 60px;
 }
 
 #previous-mobile, #next-mobile {
@@ -88,6 +96,10 @@ body {
 
 #album-cover img, #track-illustration img {
   width: 75%;
+}
+
+#home-mobile img {
+  padding-top: 10px;
 }
 
 #album-volumes, #track-fullLyrics {
@@ -212,7 +224,7 @@ a:hover {
 /* For screens that are 768px wide or less */
 @media screen and (max-width: 980px) {
   #album-content, #lyrics-content {
-    padding: 75px 0;
+    /* padding-top: 75px; */
     width: 100%;
   }
   #main-content {
@@ -242,6 +254,12 @@ a:hover {
   #home img, #home-mobile img {
     width: 35px;
   }
+
+  #trackTitle {
+    overflow: inherit;
+    white-space: inherit;
+    text-overflow: inherit;
+  }
   #main-content > #shell { grid-area: song; }
   #album-volumes, #track-fullLyrics { height: 100%; }
   #album-trackList, #track-lyrics {
@@ -260,11 +278,6 @@ a:hover {
 @media screen and (max-width: 450px) {
   #shell {
     width: 80%;
-  }
-  #trackTitle {
-    overflow: inherit;
-    white-space: inherit;
-    text-overflow: inherit;
   }
   h1 { font-size: 1.25rem; }
   h2 { font-size: 1rem; }
